# pg_tpcds

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.MD  cc  meson.build  pg_pretty_printer--1.0.sql  pg_pretty_printer.control  pg_pretty_printer.cpp  pg_tpcds.patch
cmake/: FindPostgreSQL.cmake
src/: CMakeLists.txt  pg_tpcds--1.0.sql  pg_tpcds.cpp  pg_tpcds_cleanup.sql  pg_tpcds_createtable.sql  post_prepare.sql  pre_prepare.sql
src/tpcds/: CMakeLists.txt  append_info-c.cpp  dsdgen.cpp  dsdgen_helpers.cpp  dsdgen_wrapper.c  dsdgen_wrapper.cpp  tpcds_dsdgen.cpp  tpcds_wrapper.cpp
src/tpcds/dsdgen/: .clang-format  CMakeLists.txt  StringBuffer.cpp  address.cpp  build_support.cpp  date.cpp  dbgen_version.cpp  decimal.cpp  dist.cpp  error_msg.cpp  genrand.cpp  init.cpp  join.cpp  list.cpp  load.cpp  misc.cpp  nulls.cpp  parallel.cpp  permute.cpp  pricing.cpp  r_params.cpp  release.cpp  scaling.cpp  scd.cpp  skip_days.cpp  sparse.cpp  tdef_functions.cpp  tdefs.cpp  text.cpp  w_call_center.cpp  w_catalog_page.cpp  w_catalog_returns.cpp  w_catalog_sales.cpp  w_customer.cpp  w_customer_address.cpp  w_customer_demographics.cpp  w_datetbl.cpp  w_household_demographics.cpp  w_income_band.cpp  w_inventory.cpp  (+13 more)
src/tpcds/include/: TPCDSMain.h  append_info-c.hpp  dsdgen.hpp  dsdgen_helpers.hpp  dsdgen_wrapper.h  tpcds_constants.hpp  tpcds_dsdgen.h  tpcds_loader.h  tpcds_wrapper.hpp
src/tpcds/include/dsdgen/: address.h  build_support.h  config.h  constants.h  date.h  dbgen_version.h  decimal.h  dist.h  genrand.h  grammar_support.h  list.h  nulls.h  params.h  porting.h  pricing.h  r_params.h  s_tdefs.h  scaling.h  scd.h  sparse.h  streams.h  tdef_functions.h  tdefs.h  template.h  w_call_center.h  w_catalog_returns.h  w_catalog_sales.h  w_customer.h  w_customer_address.h  w_customer_demographics.h  w_datetbl.h  w_income_band.h  w_inventory.h  w_item.h  w_promotion.h  w_reason.h  w_ship_mode.h  w_store_returns.h  w_timetbl.h  w_warehouse.h  (+2 more)
src/tpcds/include/dsdgen-c/: StringBuffer.h  config.h  constants.h  date.h  dbgen_version.h  decimal.h  dist.h  error_msg.h  genrand.h  grammar.h  init.h  list.h  porting.h  r_params.h  release.h  scaling.h  scd.h  tdef_functions.h  tdefs.h  template.h  w_call_center.h  w_catalog_page.h  w_customer_address.h  w_datetbl.h  w_household_demographics.h  w_item.h  w_store.h  w_store_returns.h  w_store_sales.h  w_web_page.h  w_web_returns.h  w_web_sales.h  w_web_site.h
test/: test.sql
